Fix add car method